--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=springboot
+spring.application.name=Java-Script-Boot-project
+#Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
